k8s/pulse-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulse-scheduler
  namespace: pulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulse-scheduler
  template:
    metadata:
      labels:
        app: pulse-scheduler
    spec:
      containers:
        - name: pulse-scheduler
          image: ondemandworld/pulse-scheduler:latest
