k8s/pulse-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulse-api
  namespace: pulse
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pulse-api
  template:
    metadata:
      labels:
        app: pulse-api
    spec:
      containers:
        - name: pulse-api
          image: ondemandworld/pulse-api:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: pulse-api
  namespace: pulse
spec:
  selector:
    app: pulse-api
  ports:
    - port: 80
      targetPort: 8000
