k8s/pulse-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulse-ui
  namespace: pulse
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pulse-ui
  template:
    metadata:
      labels:
        app: pulse-ui
    spec:
      containers:
        - name: pulse-ui
          image: ondemandworld/pulse-ui:latest
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: pulse-ui
  namespace: pulse
spec:
  selector:
    app: pulse-ui
  ports:
    - port: 80
      targetPort: 5173
